--- a/index.html
+++ b/index.html
@@ -129,7 +129,11 @@
           <div class="summary-right">
             <select class="summary-status" onchange="handleSummaryStatusChange(this)">
               <option value="Standard met">Standard met</option>
-              <option value="Standard not met">Standard not met</option>
+              <option value="Standard not all met">Standard not all met</option>
+             <option value="Good Practice">Good practice</option>
+             <option value="Excellent Practice">Excellent practice</option>
+             <option value="Not Assessed">Not Assessed</option>
+
             </select>
             <input type="checkbox" id="chk1" onclick="handleCheckboxClick(this)">
             <label for="chk1">Standards not inspected</label>
@@ -214,6 +218,10 @@
             <select class="summary-status" onchange="handleSummaryStatusChange(this)">
               <option value="Standard met">Standard met</option>
               <option value="Standard not met">Standard not met</option>
+              <option value="Good Practice">Good practice</option>
+             <option value="Excellent Practice">Excellent practice</option>
+             <option value="Not Assessed">Not Assessed</option>
+
             </select>
             <input type="checkbox" id="chk2" onclick="handleCheckboxClick(this)">
             <label for="chk2">Standards not inspected</label>
@@ -239,6 +247,10 @@
             <select class="summary-status" onchange="handleSummaryStatusChange(this)">
               <option value="Standard met">Standard met</option>
               <option value="Standard not met">Standard not met</option>
+              <option value="Good Practice">Good practice</option>
+             <option value="Excellent Practice">Excellent practice</option>
+             <option value="Not Assessed">Not Assessed</option>
+
             </select>
             <input type="checkbox" id="chk3" onclick="handleCheckboxClick(this)">
             <label for="chk3">Standards not inspected</label>
@@ -264,6 +276,10 @@
             <select class="summary-status" onchange="handleSummaryStatusChange(this)">
               <option value="Standard met">Standard met</option>
               <option value="Standard not met">Standard not met</option>
+              <option value="Good Practice">Good practice</option>
+             <option value="Excellent Practice">Excellent practice</option>
+             <option value="Not Assessed">Not Assessed</option>
+
             </select>
             <input type="checkbox" id="chk4" onclick="handleCheckboxClick(this)">
             <label for="chk4">Standards not inspected</label>
@@ -289,6 +305,10 @@
             <select class="summary-status" onchange="handleSummaryStatusChange(this)">
               <option value="Standard met">Standard met</option>
               <option value="Standard not met">Standard not met</option>
+              <option value="Good Practice">Good practice</option>
+             <option value="Excellent Practice">Excellent practice</option>
+             <option value="Not Assessed">Not Assessed</option>
+
             </select>
             <input type="checkbox" id="chk5" onclick="handleCheckboxClick(this)">
             <label for="chk5">Standards not inspected</label>
